# simcode-robocity-python-tools

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: metropolis.py  mine_main.py  quarry.py  starter_main.py
fixtures/: parity-seed7.json
robocity_sim/: __init__.py  cli.py  config.py  driver.py  fakeredis.py  live.py  module.py  world.py
simcode/: __init__.py  _context.py  _engine_dl.py  _local.py  _proxies.py  _registry.py  _runtime.py  _state.py  _wire.py  contract.py
simcode/local/: __init__.py  __main__.py
tests/: conftest.py  test_attr.py  test_cli.py  test_determinism.py  test_engine_smoke.py  test_footprint.py  test_hashcell.py  test_live.py  test_mining.py  test_parity.py  test_quests.py  test_starter.py  test_stations.py  test_subscriptions.py
