[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "simcode-robocity-tools"
version = "0.2.0"
description = "Local test tool for the SimCode Robot City Builder — runs your controller against the real, downloaded game engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SimCode" }]
keywords = ["simcode", "robocity", "simulator", "game", "testing"]
# No required runtime dependencies — stdlib only (urllib for downloads / seed lookup,
# ctypes to load the engine). The engine binary itself is downloaded at run time.
dependencies = []

[project.scripts]
robocity-sim = "robocity_sim.cli:main"

[tool.setuptools]
packages = ["simcode", "simcode.local", "robocity_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
